👍 Add some files in .idea directory into gitignore
I add .idea/gradle.xml and .idea/jarRepositories.xml into gitignore
list. Those files are not necessary managed by git.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ local.properties
 # User-specific configurations
 .idea/libraries/
 .idea/workspace.xml
+.idea/gradle.xml
+.idea/jarRepositories.xml
 .idea/tasks.xml
 .idea/.name
 .idea/compiler.xml
